# recaptcha-high-score

./: README_FIELD16_JSDOM.md  antcpt.js  benchmark.js  build_reload.js  farm.js  field16_cipher.js  field16_jsdom.js  gen_hf.js  oc_cipher.js  package-lock.json  package.json  prompt.md  result.md  split.js  ticketmaster.js  ticketmaster_chrome.js  token.js
Bypass/: README.md  antcpt.com.har  bypass.py  export02.md  fingerprint.json  pyproject.toml  run_antcpt.py  server.py  session-problems.md  session03.md  test.py
Bypass/extension/: background.js  content.js  inject-iframe.js  inject.js  manifest.json  popup.html  popup.js
Bypass/tests/fixtures/: reload_1_req.txt  reload_1_resp.txt  reload_req.txt
Bypass/tools/: decode_body.py  extract_fingerprint.py  extract_har.py  generate_fingerprint.py  proto_decode.py
final/: .gitignore  README.md  REVERSE.md  REVERSE_FIELD16_AUDIT.md  REVERSE_NUDATA_LOGIN.md  REVERSE_STATUS.md  REVERSE_TODO.md  SCALING.md  _login_probe.py  _login_probe2.py  _login_run.py  _login_try.py  cli.mjs  decrypt_diff.mjs  diag_proxyless.mjs  diag_pure_tm.mjs  diff_genuine.mjs  exp_exec.mjs  exp_geo_score.mjs  exp_geomatch.mjs  exp_isolate.mjs  exp_minimal.mjs  exp_probe.mjs  exp_split.mjs  exp_tls0.mjs  extract_zb_plaintext.mjs  fingerprints.json  flat.mjs  index.mjs  (+18 more)
recaptcha-vm/: Cargo.toml  README.md
recaptcha-vm/assets/: config_bytecode.txt
recaptcha-vm/output/: disassembled.txt
recaptcha-vm/src/: lib.rs
recaptcha-vm/src/decompiler/: mod.rs
recaptcha-vm/src/disassembler/: instructions.rs
recaptcha-vm/src/encryption/: mod.rs
(+449 files in other folders)
